--- a/Project22/Info.plist
+++ b/Project22/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We want to help you find your nearest store.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We want to help you find your nearest store.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
